--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,7 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$light-blue: #bbe1fa;
+$dark-blue: #0f4c75;
+$midium-blue: #3282b8;
+$signature-black: #1b262c;
