--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,2 +1,11 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-sm-6">
+    <%= simple_form_for @cocktail do |f| %>
+      <%= f.input :name %>
+        <%= f.input :img_url %>
+      <%= f.submit "Submit", class: "btn btn-wipeout" %>
+    <% end %>
+    </div>
+  </div>
+</div>
