--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -1,3 +1,44 @@
 // Place all the styles related to the cocktails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.cocktail-name {
+  color: white;
+  opacity: 0.8;
+  font-size: 30px;
+  font-family: "Gill Sans", sans-serif;
+}
+
+a.cocktail-name:hover {
+  color:white;
+  text-decoration: none;
+}
+
+.card-shadow {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.card-body-order {
+  border-radius: 1%;
+}
+
+.cocktail-name-show {
+  color: white;
+  opacity: 0.8;
+  font-size: 60px;
+  font-family: "Gill Sans", sans-serif;
+}
+
+a.cocktail-name-show:hover {
+  color:white;
+  text-decoration: none;
+}
+
+.menu-text {
+  color: $dark-blue;
+  opacity: 0.8;
+  font-size: 50px;
+  font-family: "Gill Sans", sans-serif; 
+}
