--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,25 @@
-<h1>Cocktails#show</h1>
-<p>Find me in app/views/cocktails/show.html.erb</p>
+<div class="container">
+  <div class="row" style="height:400px">
+        <div class="col-sm-6">
+          <div class="card card-shadow" style="height: 400px;">
+            <% unless @cocktail.img_url.nil?%>
+              <div class="card-body card-body-border" style="background-size: cover; background-image: url(<%=@cocktail.img_url%>)">
+                <%= link_to @cocktail.name, cocktail_path(@cocktail), class: "cocktail-name-show" %>
+              </div>
+            <% end %>
+
+              <%# <%= link_to image_tag(cocktail.img_url, alt: cocktail.name, width: 200), cocktail_path(cocktail) %>
+          </div>
+        </div>
+        <div class="col-sm-6">
+        <ul class="dose-desc">
+          <% @doses.each do |dose| %>
+              <li><%= dose.description %>: <%= dose.amount %>   <%= dose.ingredient.name %></li>
+              
+          <% end %>
+          <li class="mt-3"><%= link_to "Add Dose", new_cocktail_dose_path(@cocktail), class: "btn btn-wipeout" %></li>
+        </ul>
+        </div>
+  </div>
+</div>
+
