--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Doses#new</h1>
-<p>Find me in app/views/doses/new.html.erb</p>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-sm-6">
+        <%= simple_form_for [@cocktail, @dose] do |f| %>
+          <%= f.input :description %>
+          <%= f.input :amount %>
+          <%= f.input :ingredient, collection: @ingredients  %> 
+          <%= f.submit "Submit", class: "btn btn-wipeout" %>
+        <% end %>
+    </div>
+  </div>
+</div>
