--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,6 @@
   
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon sticky-top">
+<%# fixed-top will fix navbar %>
   <%= link_to root_path, class: "navbar-logo" do %>
     Wipeout Bar <i class="fas fa-biohazard"></i>
     <% end %>
