--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
 <div class="home-banner">
-  <h1 class="banner-text">Wipeout Bar</h1>
+  <h1 class="banner-text mr-3">Wipeout Bar</h1>
     <span class="banner-typed-text" id="banner-typed-text"></span>
 </div>
 
