--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-sm-6">
     <%= simple_form_for @cocktail do |f| %>
       <%= f.input :name %>
-        <%= f.input :img_url %>
+      <%= f.input :photo, as: :file %>
       <%= f.submit "Submit", class: "btn btn-wipeout" %>
     <% end %>
     </div>
