--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,7 +3,7 @@
         <div class="col-sm-6">
           <div class="card card-shadow" style="height: 400px;">
             <% unless @cocktail.img_url.nil?%>
-              <div class="card-body card-body-border" style="background-size: cover; background-image: url(<%=@cocktail.img_url%>)">
+              <div class="card-body card-body-border" style="background-size: cover; background-image: url(<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>)">
                 <%= link_to @cocktail.name, cocktail_path(@cocktail), class: "cocktail-name-show" %>
               </div>
             <% end %>
