--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,8 +2,8 @@
   <div class="row" style="height:400px">
         <div class="col-sm-6">
           <div class="card card-shadow" style="height: 400px;">
-            <% unless @cocktail.img_url.nil?%>
-              <div class="card-body card-body-border" style="background-size: cover; background-image: url(<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>)">
+            <% if @cocktail.photo.attached?%>
+              <div class="card-body card-body-border" style="background-size: cover; background-image: url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
                 <%= link_to @cocktail.name, cocktail_path(@cocktail), class: "cocktail-name-show" %>
               </div>
             <% end %>
