Cloudinary image size changed

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,7 +3,7 @@
         <div class="col-sm-6">
           <div class="card card-shadow" style="height: 400px;">
             <% if @cocktail.photo.attached?%>
-              <div class="card-body card-body-border" style="background-size: cover; background-image: url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+              <div class="card-body card-body-border" style="background-size: cover; background-image: url('<%= cl_image_path @cocktail.photo.key %>')">
                 <%= link_to @cocktail.name, cocktail_path(@cocktail), class: "cocktail-name-show" %>
               </div>
             <% end %>
