--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -13,7 +13,7 @@
         <div class="col-sm-3 mt-2">
           <div class="card card-shadow" style="height: 200px;">
             <% if cocktail.photo.attached?%>
-              <div class="card-body card-body-border" style="background-size: cover; background-image: url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+              <div class="card-body card-body-border" style="background-size: cover; background-image: url('<%= cl_image_path cocktail.photo.key %>')">
                 <%= link_to cocktail.name, cocktail_path(cocktail), class: "cocktail-name" %>
               </div>
             <% end %>
